--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
@@ -26,9 +27,43 @@ jobs:
         run: |
           set -xe
           python -VV
+          rustc --version
           python -m site
           python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade virtualenv tox tox-gh-actions
+          python -m pip install --upgrade tox tox-gh-actions
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
+        run: "python -m tox"
+
+  msrv:
+    name: "Python ${{ matrix.python.version }} with Rust ${{ matrix.rust-version }}"
+    runs-on: "ubuntu-latest"
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python:
+          - { version: "3.7", toxenv: "py37" }
+          - { version: "3.11", toxenv: "py311" }
+        rust-version: ["1.48.0"]
+
+    steps:
+      - uses: "actions/checkout@v3"
+      - uses: "actions/setup-python@v4"
+        with:
+          python-version: "${{ matrix.python.version }}"
+      - uses: dtolnay/rust-toolchain@e645b0cf01249a964ec099494d38d2da0f0b349f
+        with:
+          toolchain: ${{ matrix.rust-version }}
+      - name: "Install dependencies"
+        run: |
+          set -xe
+          python -VV
+          rustc --version
+          python -m site
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade tox
+      - name: "Run tox"
+        env:
+          TOXENV: ${{ matrix.python.toxenv }}
         run: "python -m tox"
