--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -11,6 +11,11 @@ jobs:
       matrix:
         os: [ubuntu-20.04, windows-2019, macos-11]
 
+    env:
+      CIBW_BEFORE_ALL_LINUX: "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"
+      CIBW_BUILD_VERBOSITY: "1"
+      CIBW_ENVIRONMENT: 'PATH="$PATH:$HOME/.cargo/bin"'
+
     steps:
       - uses: actions/checkout@v3
 
