More tests and typing improvements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ docs = [
 ]
 test = [
     "pytest",
+    "typing_extensions; python_version<'3.8'",
 ]
 
 [tool.isort]
@@ -29,3 +30,28 @@ known_first_party = ["crabwalk"]
 
 [tool.doc8]
 ignore-path = "docs/_build/"
+
+[tool.mypy]
+check_untyped_defs = true
+disallow_any_decorated = true
+disallow_any_generics = true
+disallow_any_unimported = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_reexport = true
+strict_equality = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unreachable = true
+warn_unused_configs = true
+warn_unused_ignores = true
+
+[tool.pytest.ini_options]
+markers = [
+    """tree(*children, chdir=False): Configure the tree_path fixture to create \
+    this directory structure.\
+    """,
+]
