--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands =
 basepython = python3.11
 deps = mypy>=0.991
 commands =
-    mypy src/crabwalk
+    mypy src/crabwalk tests
 
 [gh-actions]
 python =
