--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,14 @@ test = [
     "typing_extensions; python_version<'3.10'",
 ]
 
+[tool.setuptools]
+zip-safe = false
+package-dir = { "" = "src" }
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["crabwalk"]
+
 [tool.isort]
 profile = "black"
 known_first_party = ["crabwalk"]
