--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "setuptools-rust>=1.7.0", "wheel"]
+requires = ["setuptools", "setuptools-rust>=1.7.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
