--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: "actions/checkout@v3"
@@ -43,7 +43,7 @@ jobs:
       fail-fast: false
       matrix:
         python:
-          - { version: "3.7", toxenv: "py37" }
+          - { version: "3.8", toxenv: "py38" }
           - { version: "3.11", toxenv: "py311" }
         rust-version: ["1.63.0"]
 
