--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: "actions/checkout@v3"
@@ -44,7 +44,7 @@ jobs:
       matrix:
         python:
           - { version: "3.8", toxenv: "py38" }
-          - { version: "3.11", toxenv: "py311" }
+          - { version: "3.12", toxenv: "py312" }
         rust-version: ["1.63.0"]
 
     steps:
