--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 4.0.16
-envlist = py38,py39,py310,py311,docs,typing
+envlist = py38,py39,py310,py311,py312,docs,typing
 
 [testenv]
 extras =
@@ -9,7 +9,7 @@ commands =
     pytest {posargs}
 
 [testenv:docs]
-basepython = python3.11
+basepython = python3.12
 extras =
     docs
 commands =
@@ -18,7 +18,7 @@ commands =
     doc8 docs/
 
 [testenv:typing]
-basepython = python3.11
+basepython = python3.12
 deps = mypy>=0.991
 commands =
     mypy src/crabwalk tests
@@ -28,4 +28,5 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
-    3.11: py311, docs, typing
+    3.11: py311
+    3.12: py312, docs, typing
