--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.nox/
 .coverage
 .coverage.*
 .cache
@@ -48,3 +49,6 @@ coverage.xml
 docs/_build/
 
 target/
+.rust-cov/
+*.lcov
+*.profdata
