--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "crabwalk-rust"
-version = "0.1.0"
-authors = ["Frazer McLean <frazer@frazermclean.co.uk>"]
-edition = "2021"
-publish = false
-rust-version = "1.63"
+version = { workspace = true }
+authors = { workspace = true }
+edition = { workspace = true }
+publish = { workspace = true }
+rust-version = { workspace = true }
 
 [dependencies]
 ignore = "0.4"
 lazy_static = "1.1"
-pyo3 = { version = "0.21", features = ["abi3"] }
+pyo3 = { workspace = true }
 regex = "1.1"
 
 [features]
